[package]
name = "rua"
version = "0.19.3"
description = "Secure jailed AUR helper for Arch Linux"
authors = [
  "Vasili Novikov (maintainer) <vasya.novikov+cm3513git@gmail.com>",
  "The many great contributors, see github and gitlab <users@git>",
]
license="GPL-3.0-or-later"
edition="2021"
keywords = ["archlinux", "aur", "build", "jail", "bubblewrap"]
readme = "README.md"
repository = "https://github.com/vn971/rua"
build = "build.rs"

[features]
default=["testpacman"]
# Use library bindings to libalpm instead of shelling (calling `pacman` executable).
# Note that this breaks the tool upon major pacman upgrades.
libalpm = ["alpm"]
# Use library bindings to the "git" version of libalpm, see also above.
libalpmgit = ["libalpm", "alpm/git"]
libalpmgenerate = ["libalpm", "alpm/generate"]
testpacman = []  # whether to perform libalpm/pacman checks on tests

[build-dependencies]
structopt = "0.3.26"
libscmp = "0.2.0"

[dependencies]
alpm = { version = "2.2.1",       default-features = false, features = [], optional = true }
anyhow = { version = "1.0.66",    default-features = false, features = ["std", "backtrace"] }
chrono = { version = "0.4.23",    default-features = false, features = ["std", "clock"] }
colored = "2.0.0"
directories = "4.0.1"
env_logger = "0.10.0"
fs2 = "0.4.3"
fs_extra = "1.2.0"
indexmap = { version = "1.9.2",   default-features = false }
itertools = { version = "0.10.5", default-features = false, features = ["use_std"] }
lazy_static = "1.4.0"
libc = { version = "0.2.138",     default-features = false }
libflate = "1.2.0"
log = { version = "0.4.17",       default-features = false }
prettytable-rs = "0.9.0"
raur = { version = "7.0.0",       default-features = false, features = ["blocking", "rustls-tls"] }
regex = { version = "1.7.0",      default-features = false, features = ["perf"] }
rm_rf = "0.6.2"
ruzstd = "0.3.0"
srcinfo = "1.1.0"
structopt = "0.3.26"
tar = { version = "0.4.38",       default-features = false }
term_size = "0.3.2"
uname = "0.1.1"
xz2 = "0.1.7"

[profile.release]
lto = "thin"
