[package]
name = "rua"
version = "0.19.10"
rust-version = "1.62"
description = "Secure jailed AUR helper for Arch Linux"
authors = [
  "Vasili Novikov (maintainer) <vasya.novikov+cm3513git@gmail.com>",
  "The many great contributors, see github and gitlab <users@git>",
]
license="GPL-3.0-or-later"
edition="2021"
keywords = ["archlinux", "aur", "build", "jail", "bubblewrap"]
readme = "README.md"
repository = "https://github.com/vn971/rua"
build = "build.rs"

[features]
default=["testpacman", "rustls-tls"]
testpacman = []  # whether to perform pacman checks on tests
native-tls = ["raur/native-tls"] # build with support for OS native TLS
rustls-tls = ["raur/rusttls-tls"] # build with rustls TLS 

[build-dependencies]
structopt = "0.3.26"
libscmp = "0.2.0"

[dependencies]
alpm = { version = "5.0.2",       default-features = false, features = [], optional = true }
anyhow = { version = "1.0.100",    default-features = false, features = ["std", "backtrace"] }
chrono = { version = "0.4.43",    default-features = false, features = ["std", "clock"] }
colored = "3.1.1"
directories = "6.0.0"
env_logger = "0.11.9"
fs2 = "0.4.3"
fs_extra = "1.3.0"
indexmap = { version = "2.13.0",  default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
lazy_static = "1.5.0"
libc = { version = "0.2.163",     default-features = false }
libflate = "2.2.1"
log = { version = "0.4.28",       default-features = false }
prettytable-rs = "0.10.0"
raur = { version = "8.0.0",       default-features = false, features = ["blocking", "rusttls-tls"] }
regex = { version = "1.9.6",      default-features = false, features = ["perf"] }
rm_rf = "0.6.2"
ruzstd = "0.8.2"
srcinfo = "2.1"
structopt = "0.3.26"
tar = { version = "0.4.44",       default-features = false }
termize = "0.2.1"
uname = "0.1.1"
xz2 = "0.1.7"

[profile.release]
lto = "thin"
